<resources>
    <string name="app_name">TheGreensShop_App</string>
    <string name="logo" />
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="username">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email" />
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="flat_houseNo">Flat/House No.</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="house_plants">Houseplants</string>
    <string name="logout">Logout</string>


    <string name="user_details_name">Name: %1$s %2$s</string>
    <string name="user_details_email">Email: %1$s</string>
    <string name="user_details_phone">Phone: %1$s</string>
    <string name="user_details_address">Address: %1$s, %2$s, %3$s, %4$s, %5$s</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_vector">category_vector</string>
    <string name="my_account_details">My Account Details</string>
    <string name="pots">Pots</string>
    <string name="all_categories">All Categories</string>
    <string name="care">Care Products</string>
    <string name="accessories">Accessories</string>


</resources>