<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/username"
        android:background="@drawable/box_edit_text"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/firstname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/first_name"
        android:background="@drawable/box_edit_text"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/last_name"
        android:background="@drawable/box_edit_text"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/email"
        android:background="@drawable/box_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_edit_text"
        android:hint="@string/phone"
        android:autofillHints="phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/password"
        android:background="@drawable/box_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/address"
        android:background="@drawable/box_edit_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/street_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/street"
        android:background="@drawable/box_edit_text"
        android:hint="@string/street"
        android:inputType="text" />

    <EditText
        android:id="@+id/city_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/city"
        android:background="@drawable/box_edit_text"
        android:hint="@string/city"
        android:inputType="text" />

    <EditText
        android:id="@+id/zipcode_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/zipcode"
        android:background="@drawable/box_edit_text"
        android:hint="@string/zipcode"
        android:inputType="number" />

    <EditText
        android:id="@+id/country_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/country"
        android:background="@drawable/box_edit_text"
        android:hint="@string/country"
        android:inputType="text" />



    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_button"
        android:text="@string/signup"
        android:textColor="@color/white" />

</LinearLayout>

